--- a/css/_layout_helpers.scss
+++ b/css/_layout_helpers.scss
@@ -68,8 +68,8 @@ figure.aligncenter {
         width: 100vw;
         margin-left: 50% !important;
         transform: translateX(-50%);
-        padding-left: 15px !important;
-        padding-right: 15px !important;
+        // padding-left: 15px !important;
+        // padding-right: 15px !important;
     }
     clear: both;
     > .document_era {
