--- a/css/_base.scss
+++ b/css/_base.scss
@@ -337,6 +337,9 @@ label.title {
     font-family:"Nunito Sans", sans-serif;
     margin-bottom: 6px;
     line-height: 1;
+    + .checkboxes{
+        margin-top: 16px;
+    }
 }
 
 ::-webkit-input-placeholder {
